src/test/deca/context/invalid/fields/field_redeclaration_conflict_with_method.deca
// Description :
//    Déclaration d'un champ ayant le même nom qu'une méthode.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f;
    int f() {
        return 1;
    }
}

{
}

